--- a/Assessment3LaTeX/IITAssessment3.tex
+++ b/Assessment3LaTeX/IITAssessment3.tex
@@ -261,6 +261,9 @@ We learned that in an online environment, where members have different commitmen
 
 We thus feel that we have found a formula which works well for our team and we will continue to use this formula going forward in our assignments. 
 
+\subsection{Group Processes and Communications }
+Our group is quite diverse in age as well as spread over different time zones, which we initially thought might pose quite a challenge when it came to working as a group and having regular meetings. We found Microsoft Teams best for our meeting which we scheduled for two times a week. We made extensive minutes in the meetings that could be referred back to in the following meetings to see how each member was progressing with their parts of the assignment and to see if anyone needed assistance. The minutes were also helpful in the event that one of the members was unable to attend a meeting due to their schedule or a prior commitment, the minutes would keep them updated as to what had happened in the meeting and the progress of the assignment.  With the use of collaborative tools, we used Microsoft Teams, OneNote and Office365, team members could easily access and share the work done by them in one place so that we were working towards the common goal of completing the task together on time. Backing up our work online was also a great safety measure. Something that we found helpful was that work done by one team member would be read and edited by another team member, leaving us with a document that flowed well.  
+
 \section{Career Plans}
 \subsection{Compare and contrast the career plans, including ideal jobs, for each person in the group. What common elements are there, if any? What differentiates each position from the others, if anything? How similar or different are your career plans across the group?}
 For each of the ideal jobs chosen by the group, a good foundation is a Bachelor’s Degree in Information Technology as well as obtaining entry level experience in their chosen fields. Although all the ideal jobs start with a Bachelor’s Degree, each one would branch out into their own specific field and specialize in the skills they require for their ideal job. It is also often recommended that an internship be done in the chosen field, this allows for some hands on training as well as being a good opportunity to network which could lead to job offers and also give you good contacts in the IT industry. Another similarity, throughout the IT industry is that anyone in this industry are often expected to keep on top of the latest digital trends, and they should also know how said trends will impact their particular field. 
@@ -511,8 +514,6 @@ Chart A shows 16 week project plan, detailing the time frame for each of the abo
 
 % Skills and Jobs ----
 \part{Skills and Jobs}
-Let us suppose that a group of venture capitalists hears about your project, and is so impressed that they wish to fund you to develop it further for say six months. You will be the manager of a team of 4 people to deliver the project outcomes. What position description would be appropriate? Write 4 position descriptions for people that you would employ to take your project to the next phase. You will need to consider what skills are appropriate, which may include specific technical expertise, team work experience, leadership and management techniques, and innovative thinking. 
-
 \subsubsection{Front End Web Developer}
 A front end web developers skills are focused on building customer facing web applications. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use. 
 
@@ -627,7 +628,100 @@ We require a Dev-Ops Engineer to join our small team at Creative Protocol. You w
 
 
 % Group Reflection ----
-\part{Group Reflection}
+\part{Reflection}
+\section{Team Reflection}
+\subsubsection{What Went Well:}
+
+
+\subsubsection{What Could Be Improved:}
+
+
+\subsubsection{What Was Surprising}
+
+
+\subsubsection{What Have You Learnt About Groups:}
+
+
+\section{Individual Reflection}
+
+\subsection{Samuel Ashton}
+\subsubsection{What Went Well:}
+
+
+\subsubsection{What Could Be Improved:}
+
+
+\subsubsection{What Was Surprising}
+
+
+\subsubsection{What Have You Learnt About Groups:}
+
+
+\subsection{Shane Bunting}
+\subsubsection{What Went Well:}
+
+
+\subsubsection{What Could Be Improved:}
+
+
+\subsubsection{What Was Surprising}
+
+
+\subsubsection{What Have You Learnt About Groups:}
+
+
+\subsection{Jessica Delgado}
+\subsubsection{What Went Well:}
+
+
+\subsubsection{What Could Be Improved:}
+
+
+\subsubsection{What Was Surprising}
+
+
+\subsubsection{What Have You Learnt About Groups:}
+
+
+\subsection{William Ericson}
+\subsubsection{What Went Well:}
+Because we put in a lot of effort in assignment 2, it was easier to do this assignment compared to the previous one. A lot of the groundwork was already done 
+
+\subsubsection{What Could Be Improved:}
+It was tough working around peoples schedules, in the final two weeks, it was harder to discuss everything as a complete group. 
+
+\subsubsection{What Was Surprising}
+Even though it was tough for everyone's schedule to line up, we managed to get a lot of work done. 
+
+\subsubsection{What Have You Learnt About Groups:}
+I learnt to be flexible, not everyone is available when you are and vice versa. 
+
+\subsection{Matthew McCracken}
+\subsubsection{What Went Well:}
+Having done very well on assignment 2 I feel our group was a lot more ease at the process of the group assignment. I feel there were a lot less unnecessary meetings, most were more comfortable and understood how each member of the group worked. 
+
+\subsubsection{What Could Be Improved:}
+Even though I feel the process of the assignment 3/5 was a lot easier then assignment 2 it was still difficult with my time zone being so vastly different to everyone else’s.
+
+\subsubsection{What Was Surprising}
+Having seen everyone’s commitment for assignment 2 I was not surprised by all the effort put into assignment 3, it was still great to see everyone working so hard on this assignment.
+
+\subsubsection{What Have You Learnt About Groups:}
+Having now completed assignment 2/3/5 as a group I feel a lot easier working with others and having others to rely on in crunch times. That has made look forward to more group tasks in the future.
+
+\subsection{Cameron McLaughlan}
+\subsubsection{What Went Well:}
+
+
+\subsubsection{What Could Be Improved:}
+
+
+\subsubsection{What Was Surprising}
+
+
+\subsubsection{What Have You Learnt About Groups:}
+
+
 \newpage
 % ----
 
