--- a/Assessment3LaTeX/IITAssessment3.tex
+++ b/Assessment3LaTeX/IITAssessment3.tex
@@ -63,12 +63,16 @@ This page intentionally left blank
 % Link to websites.
 \section{Website Links}
 \subsubsection{Group Git Repository}
-\paragraph{Assessment 2:}\url{https://github.com/SamuelPaulAshton/2020SP2Group18A2}
-\paragraph{Assessment 3:}\url{https://github.com/SamuelPaulAshton/2020SP2Group18A3}
+\paragraph{Assessment 2:}\hfill \break
+\url{https://github.com/SamuelPaulAshton/2020SP2Group18A2}
+\paragraph{Assessment 3:}\hfill \break
+\url{https://github.com/SamuelPaulAshton/2020SP2Group18A3}
 
 \subsubsection{Other Links}
-\paragraph{Creative Protocol:}\url{https://}
-\paragraph{Prototype Dashboard:}\url{https://}
+\paragraph{Creative Protocol:}\hfill \break
+\url{https://samuelpaulashton.github.io/2020SP2Group18A3/index.html}
+\paragraph{Prototype Dashboard:}\hfill \break
+\url{https://samuelpaulashton.github.io/2020SP2Group18A3/pages/information.html}
 
 \newpage
 % ----
