--- a/Assessment3LaTeX/IITAssessment3.tex
+++ b/Assessment3LaTeX/IITAssessment3.tex
@@ -510,9 +510,16 @@ Once the server application has been deployed to the cloud server, multiple Pi c
 \subsection{Final Project Pitch}
 Once we have our project finished and tested, we will want another pitch video in order to attract investors.  This will focus more on the cloud based infrastructure and ability to scale the product as a possible subscription based service.  This is where we will propose native mobile apps, which our backend API will already be ready for.  
 
-Chart A shows 16 week project plan, detailing the time frame for each of the above mentioned tasks, not that several of these tasks are dependant of each other and will push forward the time frame if the prior task runs over. 
-% Add image
+The chart at the end of the report shows a 16 week project plan, detailing the time frame for each of the above mentioned tasks, note that several of these tasks are dependant of each other and will push forward the time frame if the prior task runs over. 
 
+\subsection{Scope and Limits}
+With a limited time frame, the scope of what will be developed as part of this project needs to be defined in order to contain the work required.  Two milestones exist which coincide with the pitch videos.   
+
+The first milestone is at week six of the project. At this stage we will have a single client device measuring temperature and possibly water depth, logging these readings to a round robin database to have graphs generated regularly, and displayed on a single demonstration web site.  We will also have a a concept dashboard for the cloud based login created which will demonstrate the end goal. 
+
+This project will be completed at the end of sixteen weeks, which is the second and final milestone. We will have multiple client devices communicating their data to the cloud service, to be displayed using the dashboard design from the first milestone.  
+
+The use of certain technologies are considered outside the scope of the project and are assumed as existing knowledge.  This includes network connectivity, wireless or otherwise, and administration of IaaS platforms. 
 % ----
 
 
