--- a/Assessment3LaTeX/IITAssessment3.tex
+++ b/Assessment3LaTeX/IITAssessment3.tex
@@ -552,88 +552,207 @@ We would require someone with experience with cloud environments such as AWS, Mi
 
 \section{Job Advertisements}
 \subsubsection{Front End Web Developer}
-We require a web developer to be responsible for implementing visual elements that users see and interact with in a web application. They are usually supported by back-end web developers, who are responsible for server-side application logic and integration of the work front-end developers do. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use, Mking the project more attractive to potential clients.  
+\textbf{Creative Protocol }
 \\
 \\
-\textbf{Technical Skills Required:}
+\textbf{About The Role}
+\\
+Creative Protocol are seeking a web developer with 3 to 5 years' experience in front end web development, who can work well with a team, following a consisted development methodology such as Scrum or Agile. You will be  responsible for implementing visual elements that users see and interact with in a web application, work along side and supported by our back-end web developer, who will be responsible for server-side application logic and integration of the work you produce. We strive to create an amazing user experience so we place a strong emphasis on being able to create a user friendly interface that is like no other. This is an excellent opportunity to be part of a team with a culture of continuous improvement regarding our technologies and practices. 
+\\
+\\
+\textbf{Summary of Responsibilities:}
 \begin{itemize}
-	\item HTML5
-	\item PHP
-	\item JavaScript
-	\item Frameworks such as AngularJs or Angular
-	\item Responsive Design
-	\item Testing and Debugging
+    	\item Develop usable, accessible, and beautiful user interfaces 
+    	\item Build reusable code and libraries for future use. 
+    	\item Ensure the technical feasibility of UI/UX designs 
+    	\item Optimisation of applications for speed and scalability 
+    	\item Manage your workload to meet agreed time frames. 
+    	\item Be responsible for gathering and evaluation of all user requirements, illustrating and presenting ideas, producing UI wireframes 
+    	\item Proactively bring issues and problems to the attention of the team; generate, propose, and implement innovative solutions to solve them.  solutions to solve them. 
 \end{itemize}
 \hfill \break
-\textbf{Qualifications Required:}
+\textbf{About You:}
 \begin{itemize}
-	\item A minimum of a bachelor's degree in computer science or equivalent.
-	\item We are looking for someone with 3 to 5 years' experience in front end web development, who can work well with a team, following a consisted development methodology such as Scrum or Agile.
+    	\item A minimum of a bachelor's degree in computer science or equivalent. 
+    	\item Possess a keen eye regarding a high level of detail and strive for pixel-perfect design across different web browsers and platforms 
+    	\item Expert proficiency with front end web technologies such as HTML / CSS / Javascript 
+    	\item A solid understanding of web design, accessibility, usability, search engine optimisation and information architecture 
+    	\item PHP / MySQL Back end development 
+    	\item Frameworks such as AngluarJs or Angular 
+    	\item Understanding of cloud deployments with Docker and AWS 
+    	\item Git version control (Github, Bitbucket etc) 
 \end{itemize}
+\hfill \break
+\textbf{What's On Offer?}
+\begin{itemize}
+    	\item Work in an innovative, design-driven environment. 
+    	\item Join a company that values your personal and professional development by providing future growth and development. 
+\end{itemize}
+\hfill \break
+\textbf{How To Apply}
+\\
+Please submit your resume and cover letter via email to \href{mailto:jobs@creativeprotocol.com.au}{jobs@creativeprotocol.com.au}
+\\
+\\
+Only persons with unlimited rights to work in Australia need apply. 
+\\
+\\
+We are an equal opportunity employer. 
 \newpage
 
 \subsubsection{Back End Application Developer}
-We require a Back End Application Developer to work on the server software and create a database design that will store user information. You will also need to look after the communications between the client’s devices and logging the RRD information on the central server. Lastly you will require the ability to be able to build an API that our Front End Developer can utilise in order to retrieve information for display. Previous experience in developing REST based API’s with a good understanding of secure web communication protocols will be highly considered.  
+\textbf{Creative Protocol }
 \\
 \\
-\textbf{Technical Skills Required:}
+\textbf{About The Role}
+\\
+Creative Protocol are seeking a Back End Application Developer that has the ability to understand the software development life cycle and leverage a variety of technologies to produce quality software. The role primarily revolves around looking after the communications between the client’s devices and logging the RRD information on the central server. You will also require the ability to to build an API that our Front End Developer can utilise in order to retrieve information for the display. Previous experience in developing REST based API’s with a good understanding of secure web communication protocols will be highly considered. We strive to create an amazing user experience so we place a strong emphasis on our design process. You will be given the opportunity to work with with our team internally and also be responsible for external clients on software design challenges. This is an excellent opportunity to be part of a team with a culture of continuous improvement regarding our technologies and practices. 
+\\
+\\
+\textbf{Summary of Responsibilities:}
 \begin{itemize}
-	\item Database Design - MySQL (Potential to grow into Mongo or Big Query)
-	\item Server Application Development - nodeJS
-	\item Solving problems using logic and methodical testing processes
-	\item Testing code for bugs and implementing improvements and fixes
-	\item Great communication and collaboration skills
-	\item Knowledge of framework such as AngularJs or Angular
-	\item JavaScript
-	\item HTML5
-	\item PHP
+	\item Solving problems using logic and methodical testing processes 
+	\item Produce high-quality secure code in accordance with our standards
+	\item Write and maintain automated tests for code where applicable.
+	\item Document code consistently throughout the development process. 
+	\item Deliver bug-free code to meet the defined KPIs for software quality and performance. 
+	\item Manage your workload to meet agreed time frames. 
+	\item Test new programs to ensure that logic and syntax are correct. 
+	\item Proactively bring issues and problems to the attention of the team; generate, propose, and implement innovative solutions to solve them. 
 \end{itemize}
 \hfill \break
-\textbf{Qualification Required:}
+\textbf{About You:}
 \begin{itemize}
-	\item A minimum of a Bachelor's Degree in Computer Science with a focus on Software Development would be highly advantageous. You’ll have had 3 to 5 years' experience in a similar role with the ability to work well in a small team, provide great communication, follow project plans and produce consistency along the way. 
+	\item Bachelor’s Degree in Computer Science / IT (Focus on software development) 
+    	\item Passionate about all things software and development. 
+    	\item Experience in project management, software development, database design and scripting for web applications. 
+    	\item Experience and knowledge of Framework such as Angularjs or Angular 
+    	\item Experience with SQL databases. 
+    	\item Experience with version control tools such as GIT. 
+    	\item Experience with other web development frameworks or languages would be a plus (Java, PHP, Python ect) 
+    	\item Knowledge of HTML / CSS/ JavaScript. 
 \end{itemize}
+\hfill \break
+\textbf{What's On Offer?}
+\begin{itemize}
+	\item Work in an innovative, design-driven environment. 
+    	\item Join a company that values your personal and professional development by providing future growth and development. 
+\end{itemize}
+\hfill \break
+\textbf{How To Apply}
+\\
+Please submit your resume and cover letter via email to \href{mailto:jobs@creativeprotocol.com.au}{jobs@creativeprotocol.com.au}
+\\
+\\
+Only persons with unlimited rights to work in Australia need apply. 
+\\
+\\
+We are an equal opportunity employer. 
 \newpage
 
 \subsubsection{Test Engineer}
-We require a test engineer to work closely with software developers and program managers to iron out any bugs in the product, and improve the quality of the finished product. In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. 
+\textbf{Creative Protocol }
 \\
 \\
-\textbf{Technical Skills Required:}
+\textbf{About The Role}
+\\
+Creative Protocol are currently looking to aquire a test engineer to work closely in our small team along with software developers and program managers to iron out any bugs in the product, and improve the quality of the finished product. To be successful in this role you will need to to ensure that the product is successful and that our product actually works as intended. You will be required and be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases. This will allow piece of mind that something else has not been broken somewhere along the line. You will be responsible for testing the API's built by the back end developer ensuring that they return appropriate results so the Front end developer can focus on the front end knowing his/her source data is correct. 
+\\
+\\
+\textbf{Summary of Responsibilities:}
 \begin{itemize}
-	\item Ability to identify and capture test cases, trace test results to quality risk
-	\item Analytical Skills
-	\item Basic understanding of programming concepts
-	\item Ability to work in a team
-	\item Ability to stick to deadlines
+    	\item Execution of the agreed project test strategy 
+    	\item Taking business and technical requirements and applying a “tester” mindset and skills to build quality through the life cycle 
+    	\item Proactive analysis, design and execution of effective test suites within the context of the sprint, includes manual and automation testing 
+    	\item Testing front and back end systems using a combination of web services, test harnesses and custom test tools 
+    	\item Strong exploratory and scenario testing 
 \end{itemize}
 \hfill \break
-\textbf{Qualifications Required:}
-\begin {itemize}
-	\item We are looking for someone with 3 to 5 years' experience in test engineering, who can work well with a team, following a consisted development methodology such as Scrum or Agile.   
+\textbf{About You:}
+\begin{itemize}
+    	\item 3 to 5 years' experience in test engineering with a good background in development methodology such as Scrum or Agile 
+
+    	\item Ability to identify and capture test cases, trace test results to quality risk; 
+
+    	\item Great analytical Skills 
+
+    	\item Basic understanding of programming concepts 
+
+    	\item Superb time management skills and the ability to stick to deadlines 
+
+    	\item Exposure to Automation and API testing. 
+
+    	\item Good understanding and experience of testing processes, practices and technologies across the entire software life cycle 
+
+    	\item Effective at user story interpretation and converting requirements into relevant and specific test cases 
+
+    	\item Excellent technical, written, and verbal interpersonal communication skills, with a positive attitude and enthusiasm for continuous improvement 
 \end{itemize}
+\hfill \break
+\textbf{What's On Offer?}
+\begin{itemize}
+	\item Work in an innovative, design-driven environment. 
+    	\item Join a company that values your personal and professional development by providing future growth and development.  
+\end{itemize}
+\hfill \break
+\textbf{How To Apply}
+\\
+Please submit your resume and cover letter via email to \href{mailto:jobs@creativeprotocol.com.au}{jobs@creativeprotocol.com.au}
+\\
+\\
+Only persons with unlimited rights to work in Australia need apply. 
+\\
+\\
+We are an equal opportunity employer. 
 \newpage
 
 \subsubsection{Dev-Ops Engineer}
-We require a Dev-Ops Engineer to join our small team at Creative Protocol. You will be responsible for ensuring that our product is available 24/7 and have the ability to manage software deployments through great understanding of how the product is supposed to work. You will be working with both our in team developers and testers, acting on a provided deployment plan in order to release both new features as well as bug fixes that may arise. Overall management of our cloud environment will be key in ensuring that our product and services will remain available at all times.  
+\textbf{Creative Protocol }
 \\
 \\
-\textbf{Technical Skills Required:}
+\textbf{About The Role}
+\\
+Creative Protocol are seeking a  a Dev-Ops Engineer to join our small team at Creative Protocol. You will be responsible for ensuring that our product is available 24/7 and have the ability to manage software deployments through great understanding of how the product is supposed to work. You will be working with both our in team developers and testers, acting on a provided deployment plan in order to release both new features as well as bug fixes that may arise. Overall management of our cloud environment will be key in ensuring that our product and services will remain available at all times. This is an excellent opportunity to be part of a team with a culture of continuous improvement regarding our technologies and practices. 
+\\
+\\
+\textbf{Summary of Responsibilities:}
 \begin{itemize}
-	\item Cloud Environment Experience - AWS, Azure or Google Cloud Platform
-	\item Container Management
-	\item Orchestration System - Kubernetes, Git
-	\item Security Skills
-	\item Scripting Skills - JavaScript, Python
-	\item Great Decision Making and Collaboration
-	\item Infrastructure Knowledge
-	\item Multiple OS Understanding
+	\item Maintain AWS cloud infrastructure in optimal configuration 
+    	\item Ensuring that our product is available 24/7 
+    	\item Implement, monitor and improve security configurations using best practice industry and AWS technologies, tools and processes 
+    	\item Minimise risk by ensuring knowledge of systems, procedures and processes are documented 
+    	\item Manage your workload to meet agreed time frames. 
+    	\item Proactively bring issues and problems to the attention of the team; generate, propose, and implement innovative solutions to solve them.
 \end{itemize}
 \hfill \break
-\textbf{Qualifications Required:}
+\textbf{About You:}
 \begin{itemize}
-	\item A minimum Bacherlor’s degree in computer science with a focus on software development. Equivalent qualifications from industry bodies and vendors may be equally well regarded. You will have had 3 to 5 years in similar role and any relevant AWS focussed certifications will also be highly regarded. 
+    	\item A minimum Bacherlor’s degree in computer science with a focus on software development. Equivalent qualifications from industry bodies and vendors may be equally well regarded 
+    	\item 3 to 5 years in similar role and any relevant AWS focussed certifications will also be highly regarded. 
+    	\item Scripting Skills – JavaScript, Python 
+    	\item Multiple OS understanding 
+    	\item Good understanding of container management 
+    	\item Orchestration System – Kubernetes, Git 
+    	\item Experience with Java, Docker, Kafka, SQL 
+    	\item Knowledge of web, security, and networking protocols 
+    	\item An attitude that favours continuous improvement 
 \end{itemize}
+\hfill \break
+\textbf{What's On Offer?}
+\begin{itemize}
+	\item Work in an innovative, design-driven environment. 
+    	\item Join a company that values your personal and professional development by providing future growth and development.  
+\end{itemize}
+\hfill \break
+\textbf{How To Apply}
+\\
+Please submit your resume and cover letter via email to \href{mailto:jobs@creativeprotocol.com.au}{jobs@creativeprotocol.com.au}
+\\
+\\
+Only persons with unlimited rights to work in Australia need apply. 
+\\
+\\
+We are an equal opportunity employer. 
 \newpage
 % ----
 
