--- a/Assessment3LaTeX/IITAssessment3.tex
+++ b/Assessment3LaTeX/IITAssessment3.tex
@@ -507,6 +507,15 @@ Currently, we have a functioning mock-up client device that is able to log tempe
 
 Once the server application has been deployed to the cloud server, multiple Pi clients are then able to be configured to interface with the server application. Once this has been completed we are able to perform full scope testing and further client testing. The desired outcome is that multiple clients are able to log and retrieve their data, with the data reflecting correct temperature results. As the release client device will only feature temperature readings, the initial test group can include local aquariums and aquatic animal owners. 
 
+\subsubsection{Risks}
+With the commencement of any project comes the possibility that many things could go wrong, however with the proper risk management processes these risks can be mitigated, with the intention of removing them completely.
+
+Our project includes electronics interfacing with a water source, setting us with the task of ensuring a reliable product while also having a minimalistic design. There are a couple of components that are submerged in water with the potential of 99\% of that components lifespan being spent submerged in water.
+
+As our project will rely on cloud computing a lot of planning will need to go into the implementation of the cloud service. For the initial deployment project we will be looking into IaaS to provide the cloud infrastructure as it would be cost effective and provide more reliability than what could be designed in the outlined timeframe. However the toolsets would need to be learned and understood, with the ability for ongoing support and possible migration to an internally hosted cloud service. It is early in the project to completely mitigate the risks involved in the cloud functionality, however as the project continues to develop it is vital that it is considered in each major step.
+
+A major risk present within our project is a disruption of service. This is a potential risk due to the fact all data is sent to the central server to be processed and logged. If this data is not received by the server, or logged correctly, the end user could face issues with loss of data and potentially having their aquaponics system fail from not receiving a vital notification. To combat this, a custom communications server will be built which will allow for customisable redundancy methods 
+
 \subsection{Final Project Pitch}
 Once we have our project finished and tested, we will want another pitch video in order to attract investors.  This will focus more on the cloud based infrastructure and ability to scale the product as a possible subscription based service.  This is where we will propose native mobile apps, which our backend API will already be ready for.  
 
@@ -776,29 +785,29 @@ We are an equal opportunity employer.
 
 \subsection{Samuel Ashton}
 \subsubsection{What Went Well:}
-
+I  believe that we went far beyond what was actually required for Assignment 2, so we already had most of the groundwork for Assignment 3 done.  Majority of this assignment was just clarifying details and putting things down to an actual 'project plan' 
 
 \subsubsection{What Could Be Improved:}
-
+Whether it could be improved or not but during this assignment we found that our different circumstances meant that it was almost impossible to meet as a group in entirety.  
 
 \subsubsection{What Was Surprising}
-
+No matter the difference in circumstances, each team member did everything they  could to contribute. Some members had work commitments take them out of communication range, while others were just too busy with work. Even with these hurdles everyone contributed to their best ability. 
 
 \subsubsection{What Have You Learnt About Groups:}
-
+The biggest thing I have learnt about groups during this assignment is to be accepting of others circumstances. Studying remotely is a unique scenario where everyone is at a different stage of life and has different prior commitments. Work 
 
 \subsection{Shane Bunting}
 \subsubsection{What Went Well:}
-
+The flow from assignment 2 into assignment 3 was rather easy having completed more than required previously. The other team members stepped up as they did in the last one and tackled a huge portion of the work load. 
 
 \subsubsection{What Could Be Improved:}
-
+Reading the finer details of the assignment itself to pick up little bits and pieces that were missed originally.  
 
 \subsubsection{What Was Surprising}
-
+Just how little there was to add on but also just how much there was to add on from assignment 2. There were a lot of things that stayed the same but took a different angle/approach this time around. 
 
 \subsubsection{What Have You Learnt About Groups:}
-
+That life will always get in the way no matter how much you plan and try and organise. In saying that with the different time zones certain members had, continued work hours and even adventures away things managed to get done as there were people who stepped up and took control of the situations.  
 
 \subsection{Jessica Delgado}
 \subsubsection{What Went Well:}
