--- a/Assessment3LaTeX/IITAssessment3.tex
+++ b/Assessment3LaTeX/IITAssessment3.tex
@@ -529,6 +529,15 @@ The first milestone is at week six of the project. At this stage we will have a 
 This project will be completed at the end of sixteen weeks, which is the second and final milestone. We will have multiple client devices communicating their data to the cloud service, to be displayed using the dashboard design from the first milestone.  
 
 The use of certain technologies are considered outside the scope of the project and are assumed as existing knowledge.  This includes network connectivity, wireless or otherwise, and administration of IaaS platforms. 
+
+\subsection{Roles}
+We will have a product owner who is the main driver of the product, this role is to provide a clear vision and path for the team to develop a successful product. The product owner will be responsible for overseeing the features of the product, while communicating between the stakeholders and project team. 
+
+We will also have a Lead Software Developer that is responsible for overseeing the development and implementation of backend and front end applications. As multiple programming languages and technologies will be utilised, it is important to have someone who is able to integrate the system in the future. One of the main responsibilities of this role is to provide a reliable service that has the ability to expand the organisations technologies.  
+
+To ensure the product is easy to use for the customer, a UI/UX designer will be required. A UI/UX designer has the task of making the users experience as seamless as possible, with the priority on customer satisfaction and continual improvement.  
+
+A Project manager would be required to ensure the project is progressing within the confines of the set timeframe. The project manager is responsible for almost all major phases on a project, managing the budget and scope of the project, and ensuring deadlines are met.  
 % ----
 
 
@@ -770,16 +779,16 @@ We are an equal opportunity employer.
 \part{Reflection}
 \section{Team Reflection}
 \subsubsection{What Went Well:}
-
+Having worked well together on assignment 2 working through assignment 3/5 has been a lot smoother of an experience. We have communicated well over Microsoft Teams while using OneNote for the basis of our assignments. Meetings have been kept to a minimum with everyone knowing what is expected of them, so everyone is able to focus of their tasks and updating OneNote as they progress. With two group assignments due at the same time there was concern this could split up the group and spread our resources too thin, but the group has managed the workload well and managed to complete both assignments on time. 
 
 \subsubsection{What Could Be Improved:}
-
+Having done so well on assignment 2 and with how smoothly assignment 3/5 have gone there hasn't been much space for improvement. That being said having everyone in a similar time zone and with similar work schedules would make attendance at group meetings easier. As these issues that are beyond anyone's control they cannot really be improved upon. 
 
 \subsubsection{What Was Surprising}
-
+As a group we were able to identify one of our major weaknesses for this project, being a lack of communication particularly in the beginning phases. This could be due to time zone differences, current world events, or even prior work commitments. This lapse in communication early on resulted in some of the team feeling the assigning of tasks was delayed resulting in some members having trouble with deadlines. While the team did try to distribute the work evenly, there was some opportunity to share the tasks more evenly throughout the team. By improving communication methods and working towards more collaboration in the team, the above matters would be negligible. 
 
 \subsubsection{What Have You Learnt About Groups:}
-
+Coming to the end of the last of the assignments it was clear to all of us that communicating between one and other and being open about what is happening around the clock really helped get everyone through the assignments as it had done in previous times. The biggest lesson we learnt as a group is that life can and always will get in the way and i think groups has taught us that with appropriate planning  and regular catch ups, that meeting deadlines, be it assignments or not, anything is possible.
 
 \section{Individual Reflection}
 
@@ -811,16 +820,16 @@ That life will always get in the way no matter how much you plan and try and org
 
 \subsection{Jessica Delgado}
 \subsubsection{What Went Well:}
-
+From working with the team on the previous assignment, our previous strengths on communication of set roles early allowed for us to work independently on items and flowing said items into a final project. All communication in our meetings was clear and documented well with meeting minutes being taken and shared for each meeting. There was also continual communication through the use of Microsoft Teams and Discord IM’s, advising team members of changes and upcoming deadlines. Our team was able to communicate openly with members taking on feedback positively. I am quite positive with how my team has been able to work together.
 
 \subsubsection{What Could Be Improved:}
-
+While we had most of the project already defined from the previous assignment, there was often times of doubt with what needed to be done next. We were able to affectively sort out the next steps and coordinate it as a team. A few last minute changes from the team could be better communicated earlier. 
 
 \subsubsection{What Was Surprising}
-
+The most surprising part of working with this team is how we were able to agree on most aspects of the project, the team was able to communicate all feedback productively and all feedback was taken on with considerable thought. Any issues that arose was quickly dealt with which was assisting our team in time management. 
 
 \subsubsection{What Have You Learnt About Groups:}
-
+Real life events will often get in the way of teams being able to communicate or meet up regularly. Often times I have known groups of people to not take real life events into consideration, however this team has been very open and understanding especially considering the current world events and other unforeseen circumstances 
 
 \subsection{William Ericson}
 \subsubsection{What Went Well:}
@@ -850,16 +859,20 @@ Having now completed assignment 2/3/5 as a group I feel a lot easier working wit
 
 \subsection{Cameron McLaughlan}
 \subsubsection{What Went Well:}
+Overall, our group worked very well together. Initially we were spread across different tools before agreeing on a single collaboration platform to work together on.  The use of Microsoft OneNote and Office365 worked extremely well, allowing us to sort and categorise each part of the assignment, and then work together editing others work where necessary.   We agreed on Roles early and each member was able to focus on their tasks, updating the team as they progressed. 
 
+We held regular meetings, documented in meeting minutes which we referred to in each following meeting. This allowed us to ensure that we were focused and had regular status updates.  This also allowed members who may have been unable to attend every meeting a way to stay informed.
 
 \subsubsection{What Could Be Improved:}
+As a group we were able to identify one of our major weaknesses for this project, being a lack of communication particularly in the beginning phases. This could be due to time zone differences, current world events, or even prior work commitments. This lapse in communication early on resulted in some of the team feeling the assigning of tasks was delayed resulting in some members having trouble with deadlines.  
 
+While the team did try to distribute the work evenly, there was some opportunity to share the tasks more evenly throughout the team. By improving communication methods and working towards more collaboration in the team, the above matters would be negligible. 
 
 \subsubsection{What Was Surprising}
-
+Some of the things the we found surprising about our group was the diverse backgrounds and age ranges that we all come from, including locations around the world. Even this didn’t affect our ability to collaborate or cooperate.  The group's ability to click and work well from the first meeting were quite surprising adding in everybody's crazy work schedule, it was impressive to see everyone organise themselves around their work and come together to put maximum effort into this assignment. The motivation of everyone in the group over the entire assessment period was impressive and keeping up a tempo like that was surprising.
 
 \subsubsection{What Have You Learnt About Groups:}
-
+The biggest lesson learnt during this group exercise is that communication is key.  In an online environment where members have different commitments and even work in different time zones, communicating availability and progress is paramount.  As a group everyone has learned it is important to make sure work is evenly distributed and that work commitments are known to everyone as so other members can potentially take on a bit more work to keep the team ahead of its own timeline.
 
 \newpage
 % ----
